# flowguard-clean

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: cifar10_example.py  cifar10_fid_example.py
flowguard/: __init__.py
flowguard/core/: __init__.py  calibration.py  filter.py  scoring.py
flowguard/models/: __init__.py  wrapper.py
flowguard/utils/: __init__.py  config.py  fid.py
tests/: test_filter.py
